2008-09-16  Jeffrey Stedfast  <fejj@novell.com>

	* generator/Property.cs (IsDeprecated): Allow "1" or "true".

	* generator/Method.cs (.ctor): Allow "1" or "true".

	* generator/ClassBase.cs: Allow a value of "true" to work the same
	as "1" for the deprecated and abstract attributes.

	* generator/ObjectGen.cs (Generate): Remove the extra generated
	space if the class isn't abstract.

2008-09-12  Zoltan Varga  <vargaz@gmail.com>

	* glib/GType.cs (FindTypeInReferences): Put a try-catch around the assembly
	loading as failure to load a referenced assembly is not really an error.

2008-09-12  Mike Gorse <mgorse@novell.com>

	* atk/Object.custom, atk/glue/object.c: Support GetIndexInParent.

2008-09-09  Mike Kestner  <mkestner@novell.com>

	* generator/ReturnValue.cs: warning cleanup.
	* gtk/Gtk.metadata: warning cleanup.

2008-09-09  Zoltan Varga  <vargaz@gmail.com>

	* glib/GType.cs (FindTypeInReferences): Skip dynamic assemblies.

2008-09-08  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: beef up the referenced assembly loading code to
	handle assemblies located in the same directory as the referring
	assembly.  Fixes #423450.

2008-09-05  Andrés G. Aragoneses  <aaragoneses@novell.com>

	Fixes BNC#387220.
	* glib/glue/signal.c: New glue file to call g_signal_query().
	* glib/glue/Makefile.am: Add signal.c.
	* glib/Signal.cs: check return type prior to emitting.

2008-08-28  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* atk/Util.custom: unregister get_root function when the setter
	receives null. Partial fix for BNC#411444.

2008-08-27  Mike Kestner  <mkestner@novell.com>

	* generator/ManagedCallString.cs: use existing Parameters.IsHidden
	method to check for hidden user data. 

2008-08-27  Mike Kestner  <mkestner@novell.com>

	* generator/ManagedCallString.cs: revert last change.  There are a
	lot of "broken" callback sigs out there which expose user data because
	it's not in the last parameter in the list.  I don't think we can 