@@ -1,3 +1,10 @@
+2008-09-18  Mike Kestner  <mkestner@novell.com>
+
+	* generator/LPGen.cs: remove WIN64LONGS hackery.
+	* generator/LPUGen.cs: remove WIN64LONGS hackery.
+	* generator/SymbolTable.cs: for WIN64LONGS, map them directly to
+	  (u)int SimpleGens instead of using the LP generatables.
+
 2008-09-16  Jeffrey Stedfast  <fejj@novell.com>
 
 	* generator/Property.cs (IsDeprecated): Allow "1" or "true".
